Changes for 3.4.0alpha1

New features:
.......PS. [ZBXNEXT-3655] reduced self monitoring cache locking in trappers and manager processes (wiper)
..F....... [ZBXNEXT-51] ability to clone selected elements in map editor via context menu (gcalenko)
..F....... [ZBXNEXT-3567] hide SQL error messages for regular user (gcalenko)
.......PS. [ZBXNEXT-3659] reduced cache locking time during configuration synchronization (wiper)
........S. [ZBXNEXT-3432] added support of {HOST.ID}, {HOST.HOST}, {HOST.NAME} macros in tags, improved to read those from cache; added support of interface macros in tags (vso)
A.F.I..PS. [ZBXNEXT-2074] implemented URL encoding and punycode support in web monitoring (vjaceslavs)
A.FG...PS. [ZBXNEXT-3687] make shared memory and semaphores private to the zabbix processes. Drop SQLite3 support for frontend and server (abs)
A.F.I..... [ZBXNEXT-2694] implemented multiple triggers support for map elements (Oleg)
....I...S. [ZBXNEXT-2445] increase the length of alert and trigger errors (abs)
A.F.I..... [ZBXNEXT-2031] implemented map shapes (vjaceslavs)
..F....... [ZBXNEXT-34] implemented vector graphics for maps (vjaceslavs)
A.F....PS. [ZBXNEXT-936] implemented remote command execution via proxy (wiper)
....I..... [ZBX-11909] replaced company.com with example.com in data.sql (vmurzins)
..F....... [ZBXNEXT-3654] implemented a feature to apply host group permissions to all existing subgroups (Ivo, Sasha)
..F....... [ZBXNEXT-3660] renamed "IT services" to "Services" (Ivo)
....I..... [ZBXNEXT-3568] decreased internal, discovery and auto registration default data storage period to 1 day (vso)
..F.I..... [ZBXNEXT-3679] implemented a new design for Dashboard page (Pavel, Sasha)
....I..PS. [ZBXNEXT-3386] added IPMI manager and reworked IPMI pollers to avoid connecting to one host from multiple pollers (wiper)
..F.....S. [ZBXNEXT-3572] added option to control amount of queued items (vjaceslavs)