@@ -1,6 +1,7 @@
 Changes for 3.4.0alpha1
 
 New features:
+..F....... [ZBXNEXT-3870] ability to drag multiple selected items in map editor (gcalenko)
 .......PS. [ZBXNEXT-3655] reduced self monitoring cache locking in trappers and manager processes (wiper)
 ..F....... [ZBXNEXT-51] ability to clone selected elements in map editor via context menu (gcalenko)
 ..F....... [ZBXNEXT-3567] hide SQL error messages for regular user (gcalenko)
